--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
   },
   "require": {
     "php": ">=5.6.4",
-    "ext-openssl": "*",
+    "ext-openssl": "*"
   },
   "require-dev": {
-    "laravel/laravel": "~4.2.0",
+    "laravel/laravel": "~4.2.0"
   },
   "autoload": {
     "psr-4": {
