--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
   "require-dev": {
     "laravel/laravel": "~4.2.0"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "AndriusKuc\\Encryption\\": "src/AndriusKuc/Encryption/"
